# pipeline-cycle-time-analysis

./: ANALYSIS-REPORT.md  pyproject.toml
archive/: ANALYSIS-REPORT-pre-validation.md
fixtures/2026-02-24-aep/: ANALYSIS-REPORT.md
fixtures/2026-02-24-aep/logs/: concord-log.txt  dispatcher-logs.json  webapp-logs.json
fixtures/2026-02-24-aep/metrics/: dispatcher-cpu.json  dispatcher-memory.json  hikaricp_connections_active_namespace__aep__pod__webapp_5f9486b946_wlwbf__.json  hikaricp_connections_pending_namespace__aep__pod__webapp_5f9486b946_wlwbf__.json  jetty_threads_busy_namespace__aep__pod__webapp_5f9486b946_wlwbf__.json  jvm_memory_used_bytes_namespace__aep__pod__webapp_5f9486b946_wlwbf__area__heap__.json  jvm_threads_current_namespace__aep__pod__webapp_5f9486b946_wlwbf__.json  rate_jvm_gc_collection_seconds_sum_namespace__aep__pod__webapp_5f9486b946_wlwbf_.json  webapp-cpu.json  webapp-memory.json
fixtures/2026-03-06-aep/: ANALYSIS-REPORT.md
fixtures/2026-03-06-aep/logs/: concord-log.txt  dispatcher-logs.json  webapp-logs.json
fixtures/2026-03-06-aep/metrics/: hikaricp_connections_active.json  hikaricp_connections_pending.json  jetty_threads_busy.json  jvm_memory_used_bytes.json  jvm_threads_current.json  rate_jvm_gc.json  webapp-cpu.json  webapp-memory.json
src/pipeline_cycle_time/: __init__.py  __main__.py  cli.py
src/pipeline_cycle_time/analyzers/: app_logs.py  correlator.py  metrics.py  orchestration.py  (+1 more)
tests/: ANALYSIS-REPORT.md  snapshot_report.md  test_analyzers.py  test_cli_live.py  test_discovery.py  test_fetchers.py  test_report.py
(+3033 files in other folders)
